[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Player Spaceplane/Hurt Spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Art/Player Spaceplane/Death Spritesheet.png" type="Texture" id=3]
[ext_resource path="res://PlayerBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Player Spaceplane/Flying Spritesheet.png" type="Texture" id=5]
[ext_resource path="res://SFX/Shoot1.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/PlayerDeath.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/Damage1.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), null ],
"loop": false,
"name": "Death",
"speed": 4.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Flying",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 19.0
height = 48.0

[node name="Player" type="Area2D"]
script = ExtResource( 1 )
bullet_scene = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.527394, 0.486915 )
z_index = 1000
frames = SubResource( 1 )
animation = "Death"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -5 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PrimaryCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="PrimaryCooldown" to="." method="_on_PrimaryCooldown_timeout"]
